--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "attr-accept": "^1.1.0",
+    "cape-firebase": "cape-io/cape-firebase",
     "cape-lodash": "^1.11.0",
     "cape-redux": "^3.1.0",
     "cape-redux-auth": "^4.0.0",
@@ -26,6 +27,7 @@
     "firebase": "^3.6.3",
     "location-info": "^3.1.1",
     "lodash": "^4.17.2",
+    "radium": "^0.18.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
