--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
+    "react-textarea-autosize": "^4.0.5",
     "redux": "^3.6.0",
     "redux-field": "^4.5.0",
     "redux-graph": "^2.12.0",
