--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^3.6.3",
     "location-info": "^3.1.1",
     "lodash": "^4.17.2",
+    "marked": "^0.3.6",
     "moment": "^2.18.1",
     "radium": "^0.18.1",
     "react": "^15.4.1",
