--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cape-redux-auth": "^4.0.0",
     "cape-redux-reducer": "^3.7.1",
     "cape-select": "^2.4.0",
+    "cape-style": "^1.0.0",
     "classnames": "^2.2.5",
     "firebase": "^3.6.3",
     "location-info": "^3.1.1",
