--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "attr-accept": "^1.1.0",
     "cape-firebase": "^0.6.0",
     "cape-lodash": "^1.11.0",
+    "cape-mixer": "^1.1.0",
     "cape-redux": "^3.1.0",
     "cape-redux-auth": "^4.0.0",
     "cape-redux-reducer": "^3.7.1",
