--- a/package.json
+++ b/package.json
@@ -8,42 +8,44 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-1": "^6.16.0",
     "eslint": "^3.11.1",
-    "eslint-config-airbnb": "^13.0.0",
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0",
-    "gh-pages": "^0.12.0",
-    "react-scripts": "^0.8.3"
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
+    "gh-pages": "^1.0.0",
+    "react-scripts": "^1.0.7"
   },
   "dependencies": {
     "attr-accept": "^1.1.0",
-    "cape-firebase": "^0.6.0",
+    "cape-firebase": "^1.0.9",
     "cape-lodash": "^1.11.0",
     "cape-mixer": "^1.1.0",
+    "cape-react-app": "^1.1.0",
     "cape-redux": "^3.1.0",
     "cape-redux-auth": "^4.0.0",
     "cape-redux-reducer": "^3.7.1",
     "cape-select": "^2.4.0",
     "cape-style": "^1.0.0",
     "classnames": "^2.2.5",
-    "firebase": "^3.6.3",
-    "location-info": "^3.1.1",
+    "firebase": "^4.1.1",
+    "location-info": "^4.0.3",
     "lodash": "^4.17.2",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "radium": "^0.18.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
-    "react-textarea-autosize": "^4.0.5",
+    "react-textarea-autosize": "^5.0.6",
     "redux": "^3.6.0",
-    "redux-field": "^4.5.0",
+    "redux-field": "^5.0.0",
     "redux-graph": "^2.12.0",
-    "redux-history-component": "^1.0.2",
+    "redux-history-component": "^2.1.0",
     "redux-history-sync": "^3.1.0",
     "redux-thunk": "^2.1.0",
     "redux-windowsize": "^1.3.0",
-    "reselect": "^2.5.4",
+    "reselect": "^3.0.1",
     "simple-sha1": "^2.1.0",
     "tinycolor2": "^1.4.1"
   },
