--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cape-redux": "^3.1.0",
     "cape-redux-auth": "^4.0.0",
     "cape-redux-reducer": "^3.7.1",
+    "cape-router": "^1.1.5",
     "cape-select": "^2.4.0",
     "cape-style": "^1.1.0",
     "classnames": "^2.2.5",
